WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130102
REGRESSION (
r160806
): Incorrect cascade order of prefixed and non-prefixed variants of CSS properties box-shadow and background-{clip, origin, size}
https://bugs.webkit.org/show_bug.cgi?id=130102
Summary
REGRESSION (r160806): Incorrect cascade order of prefixed and non-prefixed va...
Daniel Bates
Reported
2014-03-11 16:39:07 PDT
Following <
http://trac.webkit.org/changeset/160806
> (
bug #125213
) we compute the final value of the CSS properties box-shadow and background-{clip, origin, size} incorrectly when both the prefixed and non-prefixed variants (in order) of these properties appear in same selector definition. Consider the following definition for selector #square: #square { background-image: url(...); -webkit-background-size: 128px 32px; background-size: 128px 128px; } Then the value of the CSS property background-size will override the value of -webkit-background-size and the background size will be 128px x 128px (by definition of CSS property background-size). But it's 128px x 32px following the patch for
bug #125213
.
Attachments
Patch
(17.31 KB, patch)
2014-03-11 16:42 PDT
,
Daniel Bates
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2014-03-11 16:40:01 PDT
<
rdar://problem/16187037
>
Daniel Bates
Comment 2
2014-03-11 16:42:33 PDT
Created
attachment 226447
[details]
Patch
Andreas Kling
Comment 3
2014-03-12 18:55:07 PDT
Comment on
attachment 226447
[details]
Patch r=me
Early Warning System Bot
Comment 4
2014-03-13 02:53:44 PDT
Attachment 226447
[details]
did not pass style-queue: ERROR: LayoutTests/fast/css/resources/red-square-in-green-square.png:0: Have to enable auto props in the subversion config file (/home/ossy/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/ossy/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 5
2014-03-13 18:42:29 PDT
Committed
r165587
: <
http://trac.webkit.org/changeset/165587
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug