REGRESSION (r160806): Incorrect cascade order of prefixed and non-prefixed variants of CSS properties box-shadow and background-{clip, origin, size} https://bugs.webkit.org/show_bug.cgi?id=130102 <rdar://problem/16187037>

Reviewed by Andreas Kling.

Source/WebCore:

Fixes an issues in the computation of the final value for the CSS properties
box-shadow and background-{clip, origin, size} when the definition of a selector
uses both the prefixed and non-prefixed variants (in order) of these properties.

Tests: fast/css/cascade/background-clip-and-webkit-background-clip-cascade-order.html
       fast/css/cascade/background-origin-and-webkit-background-origin-cascade-order.html
       fast/css/cascade/background-size-and-webkit-background-size-cascade-order.html
       fast/css/cascade/box-shadow-and-webkit-box-shadow-cascade-order.html

* css/CSSPropertyNames.in: Add a comment to explain the difference between property
-webkit-box-shadow and property box-shadow.
* css/StyleResolver.cpp:
(WebCore::shouldApplyPropertyInParseOrder): Add prefixed and non-prefixed variants
of box-shadow and background-{clip, origin, size} to the list of properties that need
to be applied in the same order as they were parsed from the stylesheet.

LayoutTests:

Add tests to ensure that we correctly cascade the prefixed and non-prefixed variants
of the CSS properties box-shadow and background-{clip, origin, size}.

* fast/css/cascade/background-clip-and-webkit-background-clip-cascade-order-expected.html: Added.
* fast/css/cascade/background-clip-and-webkit-background-clip-cascade-order.html: Added.
* fast/css/cascade/background-origin-and-webkit-background-origin-cascade-order-expected.html: Added.
* fast/css/cascade/background-origin-and-webkit-background-origin-cascade-order.html: Added.
* fast/css/cascade/background-size-and-webkit-background-size-cascade-order-expected.html: Added.
* fast/css/cascade/background-size-and-webkit-background-size-cascade-order.html: Added.
* fast/css/cascade/box-shadow-and-webkit-box-shadow-cascade-order-expected.html: Added.
* fast/css/cascade/box-shadow-and-webkit-box-shadow-cascade-order.html: Added.
* fast/css/resources/green-128x128.png: Added.
* fast/css/resources/green-square-above-red-square.png: Added.
* fast/css/resources/red-square-above-green-square.png: Added.
* fast/css/resources/red-square-in-green-square.png: Added.

Canonical link: https://commits.webkit.org/148177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165587 268f45cc-cd09-0410-ab3c-d52691b4dbfc